@@ -137,7 +137,7 @@
                         -XX:+EnableDynamicAgentLoading
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens java.base/java.util=ALL-UNNAMED
-                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                        ${argLine}
                     </argLine>
                 </configuration>
             </plugin>
